resolved HEAL-1084, extra space in landing page is decreased to 3rem.

--- a/src/components/Login-Module/landing.css
+++ b/src/components/Login-Module/landing.css
@@ -1728,7 +1728,7 @@ ul.light {
 .our_spl-subtitle {
   color: #3e3e3e;
   font-size: 1.2rem;
-  margin: 1rem 0 5rem 0;
+  margin: 1rem 0 3rem 0;
   width: 33ch;
 }
 .our_spl-section img {
